<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComputeActivity"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/txtNumberOneLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/number_one_label"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <EditText
	        android:id="@+id/txtNumberOne"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="numberSigned" >
	    </EditText>
    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/txtNumberTwoLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/number_two_label"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <EditText
	        android:id="@+id/txtNumberTwo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="numberSigned" >
	    </EditText>
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/txtResultLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/result_label"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <EditText
	        android:id="@+id/txtResult"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:enabled="false"
			android:inputType="none"
			android:text="@string/result_pending">
	    </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btnAddText" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btnMultiplyText" />

    </LinearLayout>
    
    <TextView
	        android:id="@+id/txtErrorLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    
</LinearLayout>
